# rules_go

go/: def.bzl
go/private/: gazelle.bzl  mode.bzl
go/private/actions/: archive.bzl  binary.bzl  compile.bzl  library.bzl
go/private/rules/: binary.bzl  library.bzl  prefix.bzl  test.bzl  wrappers.bzl
go/private/tools/: gazelle.bzl
go/tools/builders/: BUILD  args.go  filter_tags.go
proto/: def.bzl  go_proto_library.bzl
tests/core/cross/: BUILD.bazel
tests/core/go_plugin/: BUILD.bazel  plugin.go  plugin_test.go
tests/core/verify/: BUILD.bazel  always.go  fail_test.go  lib.go  never.go  pass_test.go  wrap_test.go
tests/cross/: unix_message.go  windows_message.go
tests/gc_opts_unsafe/: BUILD.bazel
